# K-MEANS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION_ETUDIANTE.md  README.md  REFACTORING.md  create_test_image.cpp  prepare_github.sh
docs/: EXAMPLES.md  TECHNICAL.md
src/: kmeans.cpp  kmeans_image.cpp  kmeans_image_refactored.cpp  kmeans_lib.hpp  kmeans_pipeline.cpp  kmeans_simple.cpp  kmeans_visual_2d.cpp  view_side_by_side.cpp
